--- a/event.html
+++ b/event.html
@@ -61,131 +61,14 @@
                 </div>
             </div>
             <div class="event_card_container">
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                       <a href="/eventDetail.html?id=1"> <h5>Leman, Naxcivan</h5></a>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h5>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h5>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image">
-                        <img src="./src/assets/images/my image.jpg" alt="">
-                    </div>
-                    <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
-                            <span>80$ - dan</span>
-                            <p>11 oct 2005, 01:20</p>
-                    </div>
-                </div>
+                
 
             </div>
         </section>
 
     </main>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+<script type="module" src="./src/scripts/pages/events.js"></script>
 </body>
 
 </html>
