--- a/eventDetail.html
+++ b/eventDetail.html
@@ -101,6 +101,8 @@
                 </div>
             </div>
     </main>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+
 </body>
 
 </html>
