--- a/index.html
+++ b/index.html
@@ -19,26 +19,6 @@
 </head>
 
 <body>
-  <!-- <header>
-    <div class="logo">
-      <img src="./src/assets/images/eventopia.png" alt="Eventopia">
-    </div>
-    <div>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./event.html">All Events</a></li>
-        <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
-        <li><a href="#contactPage">Contact</a></li>
-      </ul>
-    </div>
-    <div class="register">
-      <a href="./signin.html"><i class="fa-regular fa-user"></i></a>
-      <a href="./basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
-      <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
-
-
-    </div>
-  </header>  -->
   <header>
     <div class="header_pages">
       <ul>
@@ -407,6 +387,8 @@
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="module" src="./src/scripts/main.js"></script>
+  <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+
 </body>
 
 </html>
