--- a/login.html
+++ b/login.html
@@ -34,7 +34,9 @@
         <div class="register">
             <a href="./basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
-            <a href="./login.html"><i class="fa-regular fa-user"></i></a>
+            <a href="./login.html" id="loginNavbar"><i class="fa-regular fa-user"></i>
+            </a>
+        
         </div>
 
     </header>
@@ -57,6 +59,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="./src/scripts/pages/login.js"></script>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
 </body>
 
 </html>
