--- a/basket.html
+++ b/basket.html
@@ -107,6 +107,8 @@
         </div>
        </div>
     </main>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+
 </body>
 
 </html>
