--- a/register.html
+++ b/register.html
@@ -66,5 +66,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="./src/scripts/pages/register.js"></script>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+
 </body>
 </html> 
