--- a/user.html
+++ b/user.html
@@ -128,6 +128,8 @@
         </div>
     </main>
     <script type="module" src="./src/scripts/pages/user-page.js"></script>
+    <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+
 </body>
 
 </html>
