--- a/index.html
+++ b/index.html
@@ -72,16 +72,25 @@
             </div>
           </div>
           <div class="swiper-slide">
+            <span>
+              THEATRE
+            </span>
             <div class="image">
               <img src="./src/assets/images/kids-image.jpg" alt="">
             </div>
           </div>
           <div class="swiper-slide">
+            <span>
+              OPERA
+            </span>
             <div class="image">
               <img src="./src/assets/images/opera-image.jpg" alt="">
             </div>
           </div>
           <div class="swiper-slide">
+            <span>
+              FESTIVAL
+            </span>
             <div class="image">
               <img src="./src/assets/images/festival-image.jpeg" alt="">
             </div>
