--- a/basket.html
+++ b/basket.html
@@ -39,75 +39,22 @@
         </div>
 
     </header>
-    <main>
-       <div class="basket">
-        <div class="basket-container">
-            <h1>My Basket</h1>
-            
-                    <div class="basket-item">
-                        <div class="left-side">
-                            <div class="basket-image">
-                                <img src="https://cdn.iticket.az/event/artist/LRwDdS2YYQMMNFqsq3oyp3jui6s78YrpvKONensD.png"
-                                    alt="">
-                            </div>
-                            <div class="basket-item_info">
-                                <span>Hayal kahvesi</span>
-                                <h2>Sancak</h2>
-                                <span>22.12.23</span>
-                            </div>
-                        </div>
-                        <div class="right-side">
-                            <div class="quantity">
-                                <div><i class="fa-solid fa-plus"></i></div>
-                                <div><span>1</span></div>
-                                <div><i class="fa-solid fa-minus"></i></div>
-                            </div>
-                            <div class="basket-item_price"><span>30 AZN</span></div>
-                            <button class="removeBtn"><i class="fa-solid fa-trash"></i></button>
-                        </div>
-                    </div>
-                    <div class="basket-item">
-                        <div class="left-side">
-                            <div class="basket-image">
-                                <img src="https://cdn.iticket.az/event/artist/LRwDdS2YYQMMNFqsq3oyp3jui6s78YrpvKONensD.png"
-                                    alt="">
-                            </div>
-                            <div class="basket-item_info">
-                                <span>Hayal kahvesi</span>
-                                <h2>Sancak</h2>
-                                <span>22.12.23</span>
-                            </div>
-                        </div>
-                        <div class="right-side">
-                            <div class="basket-item_price"><span>30 AZN</span></div>
-                            <button class="removeBtn"><i class="fa-solid fa-trash"></i></button>
-                        </div>
-                    </div>
-                    <div class="basket-item">
-                        <div class="left-side">
-                            <div class="basket-image">
-                                <img src="https://cdn.iticket.az/event/artist/LRwDdS2YYQMMNFqsq3oyp3jui6s78YrpvKONensD.png"
-                                    alt="">
-                            </div>
-                            <div class="basket-item_info">
-                                <span>Hayal kahvesi</span>
-                                <h2>Sancak</h2>
-                                <span>22.12.23</span>
-                            </div>
-                        </div>
-                        <div class="right-side">
-                            <div class="basket-item_price"><span>30 AZN</span></div>
-                            <button class="removeBtn"><i class="fa-solid fa-trash"></i></button>
-                        </div>
-                    </div>
-          <div class="order-part">
-            <span>Total: 30 AZN</span>
-            <button>Buy Now</button>
-          </div>
+    <main class="basket-main">
+        <div class="basket">
+            <div class="basket-container">
+                <h1>My Basket</h1>
+                <div class="basket-items">
+
+                </div>
+                <div class="order-part">
+                    <span>Total: 30 AZN</span>
+                    <button>Buy Now</button>
+                </div>
+            </div>
         </div>
-       </div>
     </main>
     <script type="module" src="./src/scripts/helpers/navbar.js"></script>
+    <script type="module" src="./src/scripts/pages/basket.js"></script>
 
 </body>
 
