--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
           </div>
           <div class="swiper-slide">
             <span>
-              THEATRE
+              KIDS THEATRE
             </span>
             <div class="image">
-              <img src="./src/assets/images/kids-image.jpg" alt="">
+              <!-- <img src="./src/assets/images/kids-image.jpg" alt=""> -->
+               <img src="https://images.squarespace-cdn.com/content/v1/548de0b3e4b0d8f79a390208/3740beed-0a4e-4b30-9cca-faab6543277e/iStock-488844834.jpg" alt="">
             </div>
           </div>
           <div class="swiper-slide">
