--- a/favorites.html
+++ b/favorites.html
@@ -41,30 +41,10 @@
     </header>
     <main>
         <section class="heading_sort">
-            <h1>All Events</h1>
-            <div class="sort-form">
-                <select name="address" id="priceSort">
-                    <option value="" selected hidden>Choose Price Range</option>
-                    <option value="allPrice">All</option>
-                    <option value="high">Low to High</option>
-                    <option value="low">High to Low</option>
-                </select>
-                <select name="" id="sortDate">
-                    <option value="All">All</option>
-                    <option value="New">Nearest First</option>
-                    <option value="Old">Farthest First</option>
-                </select>
-                <div class="searchForm">
-                    <input name="search" id="searchInput" placeholder="Search Event">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </div>
-            <div class="event_card_container">
+            <h1>My Favorites</h1>
                 <div id="favorite-list">
                     
                 </div>
-
-            </div>
         </section>
 
     </main>
