admin edit && delete

--- a/admin.html
+++ b/admin.html
@@ -65,6 +65,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>id</th>
                             <th>Event Photo</th>
                             <th>Event Name</th>
                             <th>Date</th>
@@ -74,13 +75,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
+                            <td>1</td>
                             <td class="event-photo">
                                 <img src="https://cdn.iticket.az/event/artist/LRwDdS2YYQMMNFqsq3oyp3jui6s78YrpvKONensD.png"
                                     alt="Event Photo">
                             </td>
-                            <td>Sancak Concert</td>
-                            <td>22.12.23</td>
+                            <td class="eventName">Sancak Concert</td>
+                            <td class="event-date">22.12.23</td>
                             <td>Hayal Kahvesi</td>
                             <td class="ticket-status">
                                 <div class="status-info">
@@ -101,13 +103,13 @@
                                     Delete
                                 </button>
                             </td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div> 
     </main> 
     <script type="module" src="./src/scripts/helpers/navbar.js"></script>
-<script type="module" src="./src/scripts/pages/admin.js"></script>
+<script type="module" src="./src/scripts/admin/admin.js"></script>
 </body>
 
 </html>
