--- a/admin.html
+++ b/admin.html
@@ -55,10 +55,16 @@
     <main class="admin-main">
             <div class="admin-header">
                 <h1>Event Management Panel</h1>
+               <div class="buttons">
+                <button class="add-events-btn">
+                    <i class="fa-solid fa-ticket"></i>
+                    Add New Event
+                </button>
                 <button class="view-users-btn">
                     <i class="fas fa-users"></i>
                     View Users
                 </button>
+               </div>
             </div>
 
             <div class="events-table">
@@ -70,6 +76,7 @@
                             <th>Event Name</th>
                             <th>Date</th>
                             <th>Venue</th>
+                            <th>Ticket Price</th>
                             <th>Ticket Status</th>
                             <th>Actions</th>
                         </tr>
