--- a/event.html
+++ b/event.html
@@ -23,7 +23,6 @@
             <ul>
                 <li><a href="./event.html">All Events</a></li>
                 <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
-                <li><a href="#contactPage">Contact</a></li>
             </ul>
         </div>
         <div class="bars">
@@ -68,6 +67,7 @@
     </main>
     <script type="module" src="./src/scripts/helpers/navbar.js"></script>
     <script type="module" src="./src/scripts/pages/events.js"></script>
+    <script type="module" src="./src/scripts/pages/favorites.js"></script>
 </body>
 
 </html>
