--- a/user.html
+++ b/user.html
@@ -36,7 +36,6 @@
                         </div>
                     </div>
                 </li>
-                <li><a href="#contactPage">Contact</a></li>
             </ul>
         </div>
         <div class="bars">
@@ -89,16 +88,17 @@
             <div class="ticket-history-section">
                 <h2>My Ticket History</h2>
                 <div class="ticket-container">
-                    <div class="ticket-item">
-                        <div class="ticket-poster">
-                            <img src="https://static.vecteezy.com/system/resources/previews/047/014/007/non_2x/glow-black-orange-disco-party-dj-event-poster-template-editor_template.jpeg"
-                                alt="Event Poster">
-                        </div>
-                        <div class="ticket-details">
-                            <h3>Event Name</h3>
-                            <p class="ticket-price">$99.99</p>
-                        </div>
-                    </div>
+    <table class="ticket-table">
+        <thead>
+                <tr>
+                    <th>Ticket Code</th>
+                    <th>Event ID</th>
+                    <th>Price (AZN)</th>
+                    <th>Purchase Date</th>
+                </tr>
+        </thead>
+        <tbody class="ticketTableBody"></tbody>
+    </table>
                 </div>
             </div>
 
