--- a/admin-user.html
+++ b/admin-user.html
@@ -14,15 +14,28 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <title>Basket Page</title>
+
+    <title>User Page</title>
 </head>
 
-<body class="basket-body">
+<body>
     <header>
         <div class="header_pages">
             <ul>
                 <li><a href="./event.html">All Events</a></li>
-                <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
+                <li>
+                    <div class="dropdown-category">
+                        <span class="category-text">Categories <i class="fa-solid fa-caret-down"></i></span>
+                        <div class="dropdown-content_categories">
+                            <a href="#">Music</a>
+                            <a href="#">For kids</a>
+                            <a href="#">Sports</a>
+                            <a href="#">Entertainment</a>
+                            <a href="#">Conference</a>
+
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="bars">
@@ -38,22 +51,16 @@
         </div>
 
     </header>
-    <main class="basket-main">
-        <div class="basket">
-            <div class="basket-container">
-                <h1>My Basket</h1>
-                <div class="basket-items">
-
-                </div>
-                <div class="order-part">
-                    <span>Total: 30 AZN</span>
-                    <button class="buyNowBtn">Buy Now</button>
-                </div>
-            </div>
+    <div class="admin-users">
+        <div class="admin-users-header">
+            <h1>User Management</h1>
         </div>
-    </main>
+        <div class="users-container">
+        </div>
+    </div>
+
+    <script type="module" src="./src/scripts/admin/admin-user.js"></script>
     <script type="module" src="./src/scripts/helpers/navbar.js"></script>
-    <script type="module" src="./src/scripts/pages/basket.js"></script>
 
 </body>
 
