--- a/admin-user.html
+++ b/admin-user.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <title>User Page</title>
+    <title>User Management Page</title>
 </head>
 
 <body>
