--- a/eventDetail.html
+++ b/eventDetail.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <title>Home Page</title>
+    <title>Event Detail</title>
 </head>
 
 <body class="detail-body">
