--- a/user.html
+++ b/user.html
@@ -55,7 +55,7 @@
         <div class="user-profile-container">
             <div class="profile-header">
                 <div class="profile-image-container">
-                    <img id="profileImage" src="./src/assets/images/user-transparent.jpg" alt="Profile Picture">
+                    <img id="profileImage" src="" alt="Profile Picture">
                     <label for="imageUpload" class="upload-button">
                         <span>Upload Photo</span>
                         <input type="file" id="imageUpload" accept="image/*" hidden>
