--- a/favorites.html
+++ b/favorites.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <title>Events Page</title>
+    <title>Favorites Page</title>
 </head>
 
 <body>
